[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Computer/tile_537.png" type="Texture" id=1]
[ext_resource path="res://Items/Computer/Computer.gd" type="Script" id=2]
[ext_resource path="res://Items/Computer/ComputerPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Computer/tile_519.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 32 )

[node name="Computer" type="Area2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 35.9594, 0 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ComputerPopup" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 32, 0 )
rotation = 1.5708
enabled = false
texture = ExtResource( 6 )
[connection signal="body_entered" from="." to="." method="_on_Computer_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Computer_body_exited"]
[connection signal="input_event" from="." to="." method="_on_Computer_input_event"]
